# flyos-housekeeper

./: CMakeLists.txt  README.md  SuspensionWidget.cpp  SuspensionWidget.h  getInfo.cpp  getInfo.h  main.cpp  mainwindow.cpp  mainwindow.h
base/: fileUtil.cpp  fileUtil.h
images/: images.qrc
styles/: imageItem.css  styles.qrc
widgets/: homeWidget.cpp  homeWidget.h  imageItem.cpp  imageItem.h  rootWidget.cpp  rootWidget.h
